syntax = "proto3";

package ai.metathings.service.deviced;
option go_package = "deviced";

import "github.com/mwitkow/go-proto-validators/validator.proto";

import "model.proto";

message GetDeviceFirmwareDescriptorRequest {
	OpDevice device = 1 [(validator.field) = {msg_exists: true}];
}

message GetDeviceFirmwareDescriptorResponse {
	FirmwareDescriptor firmware_descriptor = 1;
}
